--- a/html/index.html
+++ b/html/index.html
@@ -187,10 +187,27 @@
                 <span>Initial Invesment:</span>
                 <input type="number" min="1" max="100" name="investment" value="50" />
             </label>
-            <button class="simulation" name="simulate" value="true">Start Simulation</button>
+            @render simulation-button
         </form>
     </header>
     @require 'candles.php'
 </body>
 
 </html>
+
+@block simulation-button
+<button class="simulation" name="simulate" value="true">Start Simulation</button>
+@endblock
+
+@block simulating-button
+<button class='simulating' name='simulate' value='false'>
+    <div
+        hx-get='/candles.php?num_candles=1'
+        hx-target='#candles'
+        hx-swap='beforeend'
+        hx-select='#candles > .candle'
+        hx-trigger='every {{ $speed }}s'>
+        Stop Simulation
+    </div>
+</button>
+@endblock
