--- a/html/candles.html
+++ b/html/candles.html
@@ -31,25 +31,25 @@
             " . implode('', $popover) . "
         </div>";
     }
-
-    foreach ($candles as $candle) :
-        extract($candle);
+    ?>
+    @foreach $candle in $candles
+        <?php
         $close_high = $close > $open;
         $close_low = !$close_high;
         $class = $close_high ? 'candle-green' : 'candle-red';
-    ?>
-    <div class="candle">
-        <?php
-            echo candle_part($class . ' line', $close_high ? abs($high - $close) : abs($high - $open), ['High' => $high]);
+        ?>
+        <div class="candle">
+            <?php
+                echo candle_part($class . ' line', $close_high ? abs($high - $close) : abs($high - $open), ['High' => $high]);
 
-            $candle_open = candle_part($class, abs($close - $open) + 1, ['Open' => $open]);
-            $candle_close = candle_part($class, abs($open - $close) + 1, ['Close' => $close]);
-            echo $close_high ? $candle_close . $candle_open : $candle_open . $candle_close;
+                $candle_open = candle_part($class, abs($close - $open) + 1, ['Open' => $open]);
+                $candle_close = candle_part($class, abs($open - $close) + 1, ['Close' => $close]);
+                echo $close_high ? $candle_close . $candle_open : $candle_open . $candle_close;
 
-            echo candle_part($class . ' line', $close_low ? abs($low - $close) : abs($low - $open), ['Low' => $low]);
+                echo candle_part($class . ' line', $close_low ? abs($low - $close) : abs($low - $open), ['Low' => $low]);
             ?>
-    </div>
-    <?php endforeach ?>
+        </div>
+    @endforeach
 </section>
 
 @block order-tag
