--- a/html/candles.html
+++ b/html/candles.html
@@ -5,7 +5,7 @@
     {
         return "
         <button
-            hx-get='/candles.php?{$order}={$value}'
+            hx-get='/candles?{$order}={$value}'
             hx-target='closest .candle-part'
             hx-swap='beforeend'
             class='{$order}'>
@@ -16,7 +16,7 @@
     function popover($name, $value)
     {
         return "
-        <div class='popover'>
+        <div class='popover' _='on click hide me with opacity settle then remove @style'>
             <h1>{$name}: {$value}</h1>
             " . orderButton('call', $value) . "
             " . orderButton('put', $value) . "
