--- a/html/index.html
+++ b/html/index.html
@@ -131,13 +131,14 @@
         .popover {
             top: -50%;
             left: 50%;
-            display: none;
             position: absolute;
             white-space: nowrap;
             background-color: #fff;
             border: 1px solid #000;
             padding: 1em;
             z-index: 100;
+            opacity: 0;
+            transition: opacity 0.5s;
         }
 
         .candle:hover:nth-of-type(2n) .popover {
@@ -158,14 +159,15 @@
 
         .candle-red:hover .popover,
         .candle-green:hover .popover {
-            display: block;
+            opacity: 1;
         }
 
         .candle:last-child {
             scroll-snap-align: end;
         }
     </style>
-    <script src="https://unpkg.com/htmx.org/dist/htmx.min.js"></script>
+    <script src="https://unpkg.com/htmx.org/dist/htmx.min.js" defer></script>
+    <script src="https://unpkg.com/hyperscript.org@0.9.12" defer></script>
 </head>
 
 <body>
