--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
             </label>
             <label>
                 <span>Initial Invesment:</span>
-                <input type="number" min="1" max="100" name="investment" value="50000" />
+                <input type="number" min="1" max="1000000" name="investment" value="50000" />
             </label>
             @render simulation-button
         </form>
