--- a/html/trading.html
+++ b/html/trading.html
@@ -14,7 +14,7 @@
 <body>
     <div style="position: absolute; width: 100%; height: 100%;" id="chart"></div>
     <p id="income">Income: 0</p>
-    <script><?= `bun build js/trading.ts --minify` ?></script>
+    <script><?= `bun build js/api.ts --minify` ?></script>
 </body>
 
 </html>
