Training seed, and more data simplified

--- a/html/trading.html
+++ b/html/trading.html
@@ -13,8 +13,9 @@
 
 <body>
     <div style="position: absolute; width: 100%; height: 100%;" id="chart"></div>
-    <p id="income">Income: 0</p>
-    <script><?= `bun build js/api.ts --minify` ?></script>
+    <p id="income">Training...</p>
+    <script><?= `bun build js/api.ts` ?></script>
+    <!-- <script><?= `bun build js/api.ts --minify` ?></script> -->
 </body>
 
 </html>
