--- a/html/trading.html
+++ b/html/trading.html
@@ -4,14 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0" />
+    <title>Trading</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.green.min.css">
     <style>
         @import "index.css"
         @import "trading.css"
     </style>
-    <title>Trading</title>
+    <script defer src="https://unpkg.com/htmx.org@2.0.3"></script>
 </head>
 
 <body>
+    <div role="group" style="position: absolute; top: 0; left: 0; z-index: 100; width: 50%;">
+        @foreach $value in $buttons
+        <button hx-get="/trading?multiplier={{ $value }}" hx-target='body'>{{ $value }}</button>
+        @endforeach
+    </div>
     <div style="position: absolute; width: 100%; height: 100%;" id="chart"></div>
     <p id="income">Training...</p>
     <script><?= `bun build js/api.ts` ?></script>
